# tg-web-client

./: README.md  docker-compose.yaml
mytelethon/: Dockerfile  pyproject.toml
mytelethon/app/: __init__.py  config.ini.template  config.py  main.py
mytelethon/app/api/: models.py  pgdb.py  routes.py  tgclient.py
mytelethon/app/client/: routes.py
mytelethon/app/client/templates/: client.html  hello.html
mytelethon/app/static/: client.js
mytelethon/app/test/: test_dialogs.py
mytelethon/src/: main.py  test.py
mytelethon/src/api/: models.py  routes.py  tgclient.py  utils.py
mytelethon/src/client/: aiohttpconnector.py  models.py  routes.py
mytelethon/src/client/templates/: client.html  hello.html
mytelethon/src/static/: client.css  client.js
