[tool.poetry]
name = "mytelethon"
version = "0.1.0"
description = "telethon client for telegram"
authors = ["Alexei Shigaev <9212010568@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
telethon = "^1.33.1"
uvicorn = "^0.27.0.post1"
aiohttp = "^3.9.3"
jinja2 = "^3.1.3"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
